remove multilang in tg